--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "koa": "^2.11.0",
     "koa-session": "^5.13.1",
     "next": "^9.3.1",
+    "next-redux-wrapper": "^5.0.0",
     "ngrok": "^3.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "save": "^2.4.0"
   }
 }
